# tailnet-admin

./: README.md  pyproject.toml  tailnet-admin
examples/: list_devices.py
tailnet_admin/: api.py  cli.py  models.py  tag_cli.py  tags.py
