[project]
name = "tailnet-admin"
version = "0.1.0"
description = "Tailscale Tailnet administration CLI tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.26.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "authlib>=1.3.0",
    "keyring>=24.3.0",
]

[project.scripts]
tailnet-admin = "tailnet_admin.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]
